Upgrade Errorprone
Upgrade errorprone to 2.13.1.  Like all errorprone upgrades there are
new checks requiring code changes.

* Unused methods now cause compilation errors
* fields must be static and final
* Effectively constant booleans must now be returned as true/false.
* longs should not auto-cast to double.

Signed-off-by: Danno Ferrin <danno.ferrin@gmail.com>