@@ -45,3 +45,25 @@ dependencies {
 }
 
 test { testLogging { showStandardStreams = true } }
+
+
+tasks.withType(JavaCompile) {
+  options.compilerArgs += [
+    '--add-exports',
+    'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+    '--add-exports',
+    'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+    '--add-exports',
+    'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+    '--add-exports',
+    'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+    '--add-exports',
+    'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+    '--add-exports',
+    'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+    '--add-exports',
+    'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+    '--add-exports',
+    'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+  ]
+}
